--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,8 @@ a{
 
 
 body{
+    display: flex;
+    flex-direction: row;
     font-family: 'Roboto', sans-serif;
     background-color: #000000;
     width: 100vw;
@@ -22,10 +24,11 @@ body{
         flex-direction: column;
         align-items: flex-start;
         justify-content: space-between;
-        width: 24%;
+        width: 20%;
         height: 100%;
         background-color: rgb(61, 61, 61);
-        padding: 0 2%;
+        padding-left: 4%;
+        padding-right: 2%;
 
         #divLogo{
             display: flex;
@@ -33,9 +36,15 @@ body{
             justify-content: start;
             align-items: center;
             width: 100%;
-
+            margin: 24% 0;  
+            
             object{
-                width: 20%;
+                width: 32%;
+            }
+
+            span{
+                font-size: 32px;
+                font-weight: 600;
             }
         }
 
@@ -52,7 +61,6 @@ body{
                 flex-direction: column;
                 justify-content: space-between;
                 align-items: flex-start;
-                height: 80%;
                 width: 100%;
 
                 button{
@@ -60,20 +68,19 @@ body{
                     flex-direction: row;
                     justify-content: center;
                     align-items: center;
-                    width: 100%;
                     background-color: gray;
-                    border-radius: 12px;
+                    border-radius: 8px;
                     gap: 10%;
-                    padding: 4% 12%;
+                    padding: 4%;
                     cursor: pointer;
                     border: none;
 
                     object{
-                        width: 20%;
+                        width: 16%;
                     }
 
                     span{
-                        font-size: 16px;
+                        font-size: 20px;
                     }
                 }
 
@@ -82,26 +89,190 @@ body{
                     flex-direction: column;
                     justify-content: space-between;
                     align-items: flex-start;
-                    height: 80%;
                     width: 100%;
-                    padding-left: 12%;
+                    padding-left: 4%;
+                    margin-top: 24%;
+                    gap: 24px;
 
                     div{
                         display: flex;
                         flex-direction: row;
                         justify-content: flex-start;
                         align-items: center;
-                        width: 100%;
+                        // width: 100%;
 
                         object{
-                            width: 16%;
+                            width: 20%;
                         }
     
                         a{
-                            font-size: 16px;
-                            margin-left: 10px;
+                            font-size: 20px;
+                            margin-left: 12px;
                         }
                     }
+                }
+            }
+
+            #LogOut{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                cursor: pointer;
+                margin: 24% 0;
+
+                object{
+                    width: 20%;
+                }
+
+                span{
+                    margin-left: 20px;
+                    font-size: 20px;
+                }
+            }
+        }
+    }
+
+    // ###----### Section Middle ###----### //
+
+    #sectionMiddle{
+        width: 55%;
+        display: grid;
+        grid-template-rows: 12% 14% 56% 18%;
+        grid-template-columns: 100%;
+        background-color: #686868;
+
+        #divMiddleTop{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            padding: 0 4%;
+
+            span{
+                font-size: 28px;
+            }
+
+            #divSearch{
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+                width: 60%;
+                background-color: #ffffff;
+                border-radius: 8px;
+                padding: 4px 2%;
+
+                object{
+                    width: 8%;
+                }
+
+                input{
+                    width: 80%;
+                    height: 100%;
+                    border: none;
+                    color: white;
+                    font-size: 20px;
+                    margin-left: 4%;
+                }
+            }
+        }
+
+        #divMiddleInfo{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+
+            #divNavInfo{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-around;
+                align-items: center;
+                width: 48%;
+                background-color: #343434;
+                padding: 1% 2%;
+                border-radius: 8px;
+
+                #infoSelect{
+                    background-color: #181818;
+                    border-radius: 8px;
+                    padding: 2% 4%;
+                }
+
+                span{
+                    cursor: pointer;
+                }
+            }
+
+            #moulaStats{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                align-items: flex-start;
+                width: 30%;
+                height: 100%;
+                margin-left: 5%;
+
+                span:nth-child(1){
+                    font-size: 12px;
+                    font-weight: 900;
+                }
+
+                span:nth-child(2){
+                    font-size: 20px;
+                    font-weight: 400;
+                }
+
+                span:nth-child(2)::after{
+                    content: "BTC";
+                    font-size: 12px;
+                    font-weight: 900;
+                    margin-left: 8px;
+                    background-color: yellow;
+                    color: black;
+                    border-radius: 4px;
+                    padding: 2px;
+                }
+
+                span:nth-child(3){
+                    font-size: 16px;
+                }
+            }
+        }
+
+        #graphic{
+            background-color: #343434;
+            border-radius: 12px;
+            width: 90%;
+            height: 96%;
+            margin: 1% 5%;
+        }
+
+        #transactionsRecent{
+            margin: 0 10%;
+
+            #transactionsText{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%;
+
+                span{
+                    font-size: 16px;
+                }
+
+                span:nth-child(1){
+                    color: white;
+                    font-weight: 600;
+                }
+
+                span:nth-child(2){
+                    color: #a0a0a0;
+                    font-weight: 400;
                 }
             }
         }
