--- a/main.css
+++ b/main.css
@@ -217,7 +217,9 @@ body #sectionMiddle #graphic {
   margin: 1% 5%;
 }
 body #sectionMiddle #transactionsRecent {
-  margin: 0 10%;
+  margin: 0 4%;
+  height: 100%;
+  width: 92%;
 }
 body #sectionMiddle #transactionsRecent #transactionsText {
   display: flex;
@@ -236,6 +238,50 @@ body #sectionMiddle #transactionsRecent #transactionsText span:nth-child(1) {
 body #sectionMiddle #transactionsRecent #transactionsText span:nth-child(2) {
   color: #a0a0a0;
   font-weight: 400;
+}
+body #sectionMiddle #transactionsRecent .transaction {
+  display: grid;
+  grid-template-columns: 8% 12% 20% 20% 24% 10%;
+  grid-template-rows: 100%;
+  gap: 1%;
+  width: 100%;
+  height: 42%;
+  padding: 4px 3%;
+  margin-top: 8px;
+  background-color: #343434;
+  border-radius: 8px;
+  backdrop-filter: blur(10px);
+}
+body #sectionMiddle #transactionsRecent .transaction div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+body #sectionMiddle #transactionsRecent .transaction div .icon {
+  height: 100%;
+}
+body #sectionMiddle #transactionsRecent .transaction div object {
+  width: 100%;
+}
+body #sectionMiddle #transactionsRecent .transaction div span:nth-child(1), body #sectionMiddle #transactionsRecent .transaction div .moneyName {
+  font-size: 10px;
+  color: #d6d6d6;
+}
+body #sectionMiddle #transactionsRecent .transaction div span:nth-child(2):not(.moneyName) {
+  font-size: 12px;
+  color: rgb(76, 67, 197);
+}
+body #sectionMiddle #transactionsRecent .transaction .tradeButton {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #181818;
+  border-radius: 12px;
+  padding: 12% 18%;
+  cursor: pointer;
+  border: none;
 }
 
 /*# sourceMappingURL=main.css.map */
