--- a/style.scss
+++ b/style.scss
@@ -252,7 +252,9 @@ body{
         }
 
         #transactionsRecent{
-            margin: 0 10%;
+            margin: 0 4%;
+            height: 100%;
+            width: 92%;
 
             #transactionsText{
                 display: flex;
@@ -273,6 +275,58 @@ body{
                 span:nth-child(2){
                     color: #a0a0a0;
                     font-weight: 400;
+                }
+            }
+
+            .transaction{
+                display: grid;
+                grid-template-columns: 8% 12% 20% 20% 24% 10%;
+                grid-template-rows: 100%;
+                gap: 1%;
+                width: 100%;
+                height: 42%;
+                padding: 4px 3%;
+                margin-top: 8px;
+
+                background-color: #343434;
+                border-radius: 8px;
+                backdrop-filter: blur(10px);
+                
+                div{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    
+                    .icon{
+                        height: 100%;
+                    }
+
+                    object{
+                        width: 100%;
+                    }
+
+                    span:nth-child(1), .moneyName{
+                        font-size: 10px;
+                        color: #d6d6d6;
+                    }
+
+                    span:nth-child(2):not(.moneyName){
+                        font-size: 12px;
+                        color: rgb(76, 67, 197);
+                    }
+                }
+
+                .tradeButton{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    background-color: #181818;
+                    border-radius: 12px;
+                    padding: 12% 18%;
+                    cursor: pointer;
+                    border: none;
                 }
             }
         }
