--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
   padding: 0;
   margin: 0;
   color: white;
+  border: red 1px solid !important;
 }
 
 a {
@@ -11,8 +12,8 @@ a {
 }
 
 body {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: 20% 55% 25%;
   font-family: "Roboto", sans-serif;
   background-color: #000000;
   width: 100vw;
@@ -23,7 +24,7 @@ body #sectionLeft {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  width: 20%;
+  width: 100%;
   height: 100%;
   background-color: rgb(61, 61, 61);
   padding-left: 4%;
@@ -115,7 +116,7 @@ body #sectionLeft #divNavLog #LogOut span {
   font-size: 20px;
 }
 body #sectionMiddle {
-  width: 55%;
+  width: 100%;
   display: grid;
   grid-template-rows: 12% 14% 56% 18%;
   grid-template-columns: 100%;
@@ -282,6 +283,78 @@ body #sectionMiddle #transactionsRecent .transaction .tradeButton {
   padding: 12% 18%;
   cursor: pointer;
   border: none;
+}
+body #sectionRight {
+  display: grid;
+  grid-template-rows: 10% 55% 35%;
+  width: 100%;
+  background-color: #805454;
+}
+body #sectionRight #divTopRight {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+body #sectionRight #divTopRight object {
+  width: 12%;
+  margin: 4%;
+}
+body #sectionRight #divMiddleLeft {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  width: 100%;
+  height: 100%;
+  gap: 4%;
+}
+body #sectionRight #divMiddleLeft > span {
+  font-size: 12px;
+  margin-left: 4%;
+  font-weight: 600;
+}
+body #sectionRight #divMiddleLeft > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 90%;
+}
+body #sectionRight #divMiddleLeft > div .elementTransactionsLeft {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 95%;
+  height: 100%;
+}
+body #sectionRight #divMiddleLeft > div .elementTransactionsLeft object {
+  width: 14%;
+}
+body #sectionRight #divMiddleLeft > div .elementTransactionsLeft div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-evenly;
+  height: 80%;
+}
+body #sectionRight #divMiddleLeft > div .elementTransactionsLeft div span {
+  font-size: 12px;
+  font-weight: 400;
+  color: #a0a0a0;
+}
+body #sectionRight #divMiddleLeft > div .elementTransactionsLeft div:nth-child(2) span:nth-child(1) {
+  font-size: 12px;
+  font-weight: 600;
+  color: #ffffff;
+}
+body #sectionRight #divMiddleLeft > div .elementTransactionsLeft div:nth-child(3) span:nth-child(1) {
+  font-size: 12px;
+  font-weight: 600;
+  color: #0c530a;
 }
 
 /*# sourceMappingURL=main.css.map */
