--- a/style.scss
+++ b/style.scss
@@ -3,6 +3,7 @@
     padding: 0;
     margin: 0;
     color: white;
+    border: red 1px solid !important;
 }
 
 a{
@@ -12,8 +13,8 @@ a{
 
 
 body{
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 20% 55% 25%;
     font-family: 'Roboto', sans-serif;
     background-color: #000000;
     width: 100vw;
@@ -24,7 +25,7 @@ body{
         flex-direction: column;
         align-items: flex-start;
         justify-content: space-between;
-        width: 20%;
+        width: 100%;
         height: 100%;
         background-color: rgb(61, 61, 61);
         padding-left: 4%;
@@ -135,7 +136,7 @@ body{
     // ###----### Section Middle ###----### //
 
     #sectionMiddle{
-        width: 55%;
+        width: 100%;
         display: grid;
         grid-template-rows: 12% 14% 56% 18%;
         grid-template-columns: 100%;
@@ -329,6 +330,100 @@ body{
                     border: none;
                 }
             }
+        }
+    }
+
+    // ###----### Section Left ###----### //
+
+    #sectionRight{
+        display: grid;
+        grid-template-rows: 10% 55% 35%;
+        width: 100%;
+        background-color: #805454;
+
+        #divTopRight{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+
+            object{
+                width: 12%;
+                margin: 4%;
+            }
+        }
+
+        #divMiddleLeft{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: flex-start;
+            width: 100%;
+            height: 100%;
+            gap: 4%;
+
+            >span{
+                font-size: 12px;
+                margin-left: 4%;
+                font-weight: 600;
+            }
+
+            > div{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                align-items: center;
+                width: 100%;
+                height: 90%;
+
+                .elementTransactionsLeft{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+                    width: 95%;
+                    height: 100%;
+
+                    object{
+                        width: 14%;
+                    }
+
+                    div{
+                        display: flex;
+                        flex-direction: column;
+                        align-items: flex-start;
+                        justify-content: space-evenly;
+                        height: 80%;
+
+                        span{
+                            font-size: 12px;
+                            font-weight: 400;
+                            color: #a0a0a0;
+                        }
+                    }
+
+                    div:nth-child(2){
+                        span:nth-child(1){
+                            font-size: 12px;
+                            font-weight: 600;
+                            color: #ffffff;
+                        }
+                    }
+
+                    div:nth-child(3){
+                        span:nth-child(1){
+                            font-size: 12px;
+                            font-weight: 600;
+                            color: #0c530a;
+                        }
+                    }
+                }
+            }
+        }
+
+        #divBottomLeft{
+
         }
     }
 }
