--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,11 @@
+$breakpoint-tablette: 768px;
+
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     color: white;
-    border: red 1px solid !important;
+    // border: red 1px solid !important;
 }
 
 a{
@@ -17,7 +19,6 @@ body{
     grid-template-columns: 20% 55% 25%;
     font-family: 'Roboto', sans-serif;
     background-color: #000000;
-    width: 100vw;
     height: 100vh;
 
     #sectionLeft{
@@ -27,7 +28,7 @@ body{
         justify-content: space-between;
         width: 100%;
         height: 100%;
-        background-color: rgb(61, 61, 61);
+        // background-color: rgb(61, 61, 61);
         padding-left: 4%;
         padding-right: 2%;
 
@@ -136,19 +137,14 @@ body{
     // ###----### Section Middle ###----### //
 
     #sectionMiddle{
-        width: 100%;
         display: grid;
         grid-template-rows: 12% 14% 56% 18%;
-        grid-template-columns: 100%;
-        background-color: #686868;
 
         #divMiddleTop{
             display: flex;
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
-            width: 100%;
-            height: 100%;
             padding: 0 4%;
 
             span{
@@ -184,8 +180,6 @@ body{
             display: flex;
             flex-direction: row;
             align-items: center;
-            width: 100%;
-            height: 100%;
 
             #divNavInfo{
                 display: flex;
@@ -214,7 +208,6 @@ body{
                 justify-content: space-evenly;
                 align-items: flex-start;
                 width: 30%;
-                height: 100%;
                 margin-left: 5%;
 
                 span:nth-child(1){
@@ -247,15 +240,11 @@ body{
         #graphic{
             background-color: #343434;
             border-radius: 12px;
-            width: 90%;
-            height: 96%;
             margin: 1% 5%;
         }
 
         #transactionsRecent{
             margin: 0 4%;
-            height: 100%;
-            width: 92%;
 
             #transactionsText{
                 display: flex;
@@ -284,8 +273,6 @@ body{
                 grid-template-columns: 8% 12% 20% 20% 24% 10%;
                 grid-template-rows: 100%;
                 gap: 1%;
-                width: 100%;
-                height: 42%;
                 padding: 4px 3%;
                 margin-top: 8px;
 
@@ -301,6 +288,7 @@ body{
                     
                     .icon{
                         height: 100%;
+                        width: auto;
                     }
 
                     object{
@@ -339,7 +327,7 @@ body{
         display: grid;
         grid-template-rows: 10% 55% 35%;
         width: 100%;
-        background-color: #805454;
+        // background-color: #805454;
 
         #divTopRight{
             display: flex;
@@ -360,7 +348,6 @@ body{
             justify-content: space-evenly;
             align-items: flex-start;
             width: 100%;
-            height: 100%;
             gap: 4%;
 
             >span{
@@ -383,7 +370,6 @@ body{
                     justify-content: space-between;
                     align-items: center;
                     width: 95%;
-                    height: 100%;
 
                     object{
                         width: 14%;
@@ -423,7 +409,56 @@ body{
         }
 
         #divBottomLeft{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: flex-start;
+            width: 100%;
+            gap: 6%;
 
+
+            >span{
+                font-size: 12px;
+                margin-left: 4%;
+                font-weight: 600;
+            }
+
+            .elementAssets{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: flex-end;
+                width: 92%;
+                background: linear-gradient(115deg, #6411a8 0%, #6411a8 35%, #3067bb 65%, #3067bb 100%);
+                backdrop-filter: blur(10px);
+                border-radius: 12px;
+                margin: auto;
+                padding: 2% 4%;
+
+                div{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    align-items: flex-start;
+                    gap: 6px;
+
+                    span:nth-child(1){
+                        font-size: 12px;
+                        font-weight: 600;
+                        color: #ffffff;
+                    }
+
+                    span:nth-child(2){
+                        font-size: 12px;
+                        font-weight: 400;
+                        color: #ffffff;
+                    }
+                }
+
+                span{
+                    padding-right: 4px;
+                }
+            }
         }
     }
 }
