--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,7 @@ body{
     flex-direction: row;
     font-family: 'Roboto', sans-serif;
     background-color: #000000;
+    margin-bottom: 4vh;
 
     @media screen and (max-width: $breakpoint-tablette){
         display: flex;
@@ -30,13 +31,12 @@ body{
         flex-direction: column;
         align-items: flex-start;
         justify-content: space-between;
-        height: 100%;
         // background-color: rgb(61, 61, 61);
         padding-left: 4%;
         padding-right: 2%;
         width: 20%;
 
-        @media screen and (max-width: $breakpoint-tablette){
+        @media screen and (max-width: 1024px){
             display: none;
         }
 
@@ -78,7 +78,9 @@ body{
                     flex-direction: row;
                     justify-content: center;
                     align-items: center;
-                    background-color: gray;
+                    background-image: url("Media/BackgroundButton.png");
+                    background-size: cover;
+                    background-repeat: no-repeat;
                     border-radius: 8px;
                     gap: 10%;
                     padding: 4%;
@@ -90,7 +92,8 @@ body{
                     }
 
                     span{
-                        font-size: 20px;
+                        color: black;
+                        font-size: 18px;
                     }
                 }
 
@@ -128,7 +131,6 @@ body{
                 flex-direction: row;
                 align-items: center;
                 cursor: pointer;
-                margin: 24% 0;
 
                 object{
                     width: 20%;
@@ -149,6 +151,12 @@ body{
         flex-direction: column;
         gap: 2vh;
         width: 56%;
+
+
+        @media screen and (max-width: 1024px){
+            width: 65%;
+            gap: 4vh;
+        }
 
         @media screen and (max-width: $breakpoint-tablette){
             display: flex;
@@ -213,6 +221,7 @@ body{
                 height: auto;
                 margin: 5%;
                 gap: 12%;
+                width: auto;
             }
 
             #divNavInfo{
@@ -226,8 +235,9 @@ body{
                 border-radius: 8px;
 
                 @media screen and (max-width: $breakpoint-tablette){
-                    width: 100%;
+                    width: 86%;
                     height: 100%;
+                    margin: auto;
                 }
 
                 #infoSelect{
@@ -283,15 +293,58 @@ body{
         }
 
         #graphic{
+            position: relative;
             background-color: #343434;
             border-radius: 12px;
             margin: 1% 5%;
-            height: 60vh;
+            height: 40vw;
 
             @media screen and (max-width: $breakpoint-tablette){
                 width: 90%;
-                height: 24vh;
+                height: 64vw;
                 margin: 4% auto;
+            }
+
+            @media screen and (max-width: 320px){
+                height: 96vw;
+            }
+
+            canvas{
+                position: absolute;
+                bottom: 12%;
+                left: 5%;
+                width: 90% !important;
+            }
+
+            > div{
+
+                div{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    align-items: center;
+                    width: 40%;
+                    padding: 0 4%;
+                    margin-top: 4%;
+
+                    @media screen and (max-width: $breakpoint-tablette){
+                        margin-top: 8%;
+                        width: 60%;
+                    }
+
+                    span{
+                        background-color: #000000;
+                        padding: 2px 4px;
+                        border-radius: 4px;
+                        font-size: 16px;
+                    }
+
+                    span:nth-child(2){
+                        color: #000000;
+                        background-color: #ffffff;
+                        font-weight: 600;
+                    }
+                }
             }
         }
 
@@ -412,8 +465,12 @@ body{
         grid-template-rows: 10% 55% 35%;
         width: 24%;
         
+        @media screen and (max-width: 1024px){
+            width: 35%;
+            grid-template-rows: 20% 40% 40%;
+        }
         
-        @media screen and (max-width: 768px){
+        @media screen and (max-width: $breakpoint-tablette){
             width: auto;
             display: flex;
             flex-direction: column;
@@ -428,7 +485,7 @@ body{
             align-items: center;
             width: 100%;
 
-            @media screen and (max-width: 768px){
+            @media screen and (max-width: $breakpoint-tablette){
                 display: none;
             }
 
@@ -447,7 +504,7 @@ body{
             gap: 4%;
 
             
-            @media screen and (max-width: 768px){
+            @media screen and (max-width: $breakpoint-tablette){
                 gap: 16px;
                 width: 80%;
                 margin: auto;
@@ -465,9 +522,9 @@ body{
                 justify-content: space-evenly;
                 align-items: center;
                 width: 100%;
-                height: 90%;
+                height: 86%;
 
-                @media screen and (max-width: 768px){
+                @media screen and (max-width: $breakpoint-tablette){
                     gap: 16px;
                 }
 
@@ -523,7 +580,7 @@ body{
             width: 100%;
             gap: 6%;
 
-            @media screen and (max-width: 768px){
+            @media screen and (max-width: $breakpoint-tablette){
                 gap: 16px;
                 width: 80%;
                 margin: auto;
@@ -542,7 +599,6 @@ body{
                 justify-content: space-between;
                 align-items: flex-end;
                 width: 92%;
-                background: linear-gradient(115deg, #6411a8 0%, #6411a8 35%, #3067bb 65%, #3067bb 100%);
                 // backdrop-filter: blur(10px);
                 border-radius: 12px;
                 margin: auto;
@@ -558,18 +614,32 @@ body{
                     span:nth-child(1){
                         font-size: 12px;
                         font-weight: 600;
-                        color: #ffffff;
                     }
 
                     span:nth-child(2){
                         font-size: 12px;
                         font-weight: 400;
-                        color: #ffffff;
                     }
                 }
 
                 span{
                     padding-right: 4px;
+                }
+            }
+
+            .elementAssets:nth-child(2){
+                background: linear-gradient(115deg, rgba(204,0,255,0.74) 0%, rgba(204,0,255,0.74) 35%, #1970D6 65%, #1970D6 100%);
+
+                span{
+                    color: #ffffff;
+                }
+            }
+
+            .elementAssets:nth-child(3){
+                background: linear-gradient(105deg, #FAFF00 0%, #FAFF00 40%, #4e96c0 75%, #c6c9ce 100%);
+
+                span{
+                    color: #000000;
                 }
             }
         }
@@ -580,7 +650,7 @@ body{
     #responsiveSection{
         display: none;
 
-        @media screen and (max-width: 768px){
+        @media screen and (max-width: $breakpoint-tablette){
             display: flex;
             flex-direction: row;
             justify-content: space-between;
