:bug: Little changes

--- a/main.css
+++ b/main.css
@@ -77,7 +77,7 @@ body #sectionLeft #divNavLog #divNav button {
   background-repeat: no-repeat;
   border-radius: 8px;
   gap: 10%;
-  padding: 4%;
+  padding: 6% 10%;
   cursor: pointer;
   border: none;
 }
@@ -178,7 +178,7 @@ body #sectionMiddle #divMiddleTop #divSearch input {
   width: 80%;
   height: 100%;
   border: none;
-  color: white;
+  color: black;
   font-size: 20px;
   margin-left: 4%;
 }
@@ -384,11 +384,19 @@ body #sectionMiddle #transactionsRecent .transaction div object {
 }
 body #sectionMiddle #transactionsRecent .transaction div span:nth-child(1), body #sectionMiddle #transactionsRecent .transaction div .moneyName {
   font-size: 10px;
-  color: #d6d6d6;
+  color: #a0a0a0;
 }
 body #sectionMiddle #transactionsRecent .transaction div span:nth-child(2):not(.moneyName) {
   font-size: 12px;
   color: rgb(76, 67, 197);
+}
+@media screen and (max-width: 768px) {
+  body #sectionMiddle #transactionsRecent .transaction div span:nth-child(1), body #sectionMiddle #transactionsRecent .transaction div .moneyName {
+    font-size: 12px;
+  }
+  body #sectionMiddle #transactionsRecent .transaction div span:nth-child(2):not(.moneyName) {
+    font-size: 14px;
+  }
 }
 body #sectionMiddle #transactionsRecent .transaction .tradeButton {
   display: flex;
@@ -460,7 +468,7 @@ body #sectionRight #divMiddleLeft {
   }
 }
 body #sectionRight #divMiddleLeft > span {
-  font-size: 12px;
+  font-size: 16px;
   margin-left: 4%;
   font-weight: 600;
 }
@@ -514,8 +522,6 @@ body #sectionRight #divBottomLeft {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-start;
-  width: 100%;
-  gap: 6%;
 }
 @media screen and (max-width: 768px) {
   body #sectionRight #divBottomLeft {
@@ -525,7 +531,7 @@ body #sectionRight #divBottomLeft {
   }
 }
 body #sectionRight #divBottomLeft > span {
-  font-size: 12px;
+  font-size: 16px;
   margin-left: 4%;
   font-weight: 600;
 }
@@ -537,7 +543,7 @@ body #sectionRight #divBottomLeft .elementAssets {
   width: 92%;
   border-radius: 12px;
   margin: auto;
-  padding: 2% 4%;
+  padding: 6%;
 }
 body #sectionRight #divBottomLeft .elementAssets div {
   display: flex;
